# devstream-fastapi

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.local.yml  docker-compose.prod.yml  example.env  pyproject.toml
app/: main.py  routes.py
app/core/: config.py  db.py  settings.py
app/core/models/: aws_accounts.py
app/core/schemas/: aws_accounts.py
app/core/services/: aws_accounts.py
app/core/utils/: aws.py  celery.py  logging.py  templates.py
app/core/views/: aws_accounts.py
app/s3_buckets/: models.py  schemas.py  services.py  views.py
app/snapshots/: models.py  schemas.py  services.py  tasks.py  views.py
app/sql/: alembic.ini
app/sql/alembic/: env.py
app/sql/migrations/: 2024-10-07_336b0253c2e4.py  2024-10-07_44e214c20c98.py  2024-10-07_cf41862f2aee.py  2024-10-07_f530034cf2a8.py
app/templates/: base.html
app/templates/pages/: home.html  s3_buckets.html  snapshots.html
app/templates/partials/: side_navbar.html  snapshot_card.html  top_navbar.html
app/templates/policies/: s3_bucket_policy.j2
docker/: Dockerfile
requirements/: base.in  base.txt  dev.in  dev.txt
tailwindcss/: tailwind.config.js
