[tool.poetry]
name = "devstream"
version = "0.1.0"
description = ""
authors = ["Brad Kovaluk <bkovaluk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "1.13.1"
amqp = "5.2.0"
annotated-types = "0.7.0"
anyio = "3.7.1"
async-timeout = "4.0.3"
asyncpg = "0.29.0"
billiard = "4.2.1"
boto3 = "1.35.34"
botocore = "1.35.34"
celery = "5.4.0"
certifi = "2024.8.30"
click = "8.1.7"
click-didyoumean = "0.3.1"
click-plugins = "1.1.1"
click-repl = "0.3.0"
faker = "22.0.0"
fastapi = "0.104.1"
flower = "2.0.1"
greenlet = "3.1.1"
h11 = "0.14.0"
httpcore = "1.0.5"
httptools = "0.6.1"
httpx = "0.25.2"
humanize = "4.11.0"
idna = "3.10"
jinja2 = "3.1.2"
jmespath = "1.0.1"
kombu = "5.4.2"
mako = "1.3.5"
markupsafe = "2.1.5"
prometheus-client = "0.21.0"
prompt-toolkit = "3.0.48"
psycopg2-binary = "2.9.9"
pydantic = "2.9.2"
pydantic-core = "2.23.4"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
python-multipart = "0.0.6"
pytz = "2024.2"
pyyaml = "6.0.2"
redis = "5.1.1"
s3transfer = "0.10.2"
six = "1.16.0"
sniffio = "1.3.1"
sqlalchemy = "2.0.25"
starlette = "0.27.0"
tornado = "6.4.1"
typing-extensions = "4.12.2"
tzdata = "2024.2"
urllib3 = "2.2.3"
uvicorn = "0.24.0"
uvloop = "0.20.0"
vine = "5.1.0"
watchfiles = "0.24.0"
wcwidth = "0.2.13"
websockets = "13.1"


[tool.poetry.group.dev.dependencies]
alembic = "1.13.1"
amqp = "5.2.0"
annotated-types = "0.7.0"
anyio = "3.7.1"
asttokens = "2.4.1"
async-timeout = "4.0.3"
asyncpg = "0.29.0"
billiard = "4.2.1"
boto3 = "1.35.34"
botocore = "1.35.34"
celery = "5.4.0"
certifi = "2024.8.30"
charset-normalizer = "3.3.2"
click = "8.1.7"
click-didyoumean = "0.3.1"
click-plugins = "1.1.1"
click-repl = "0.3.0"
coverage = "7.6.1"
decorator = "5.1.1"
executing = "2.1.0"
faker = "22.0.0"
fastapi = "0.104.1"
flower = "2.0.1"
greenlet = "3.1.1"
h11 = "0.14.0"
httpcore = "1.0.5"
httptools = "0.6.1"
httpx = "0.25.2"
humanize = "4.11.0"
idna = "3.10"
iniconfig = "2.0.0"
ipdb = "0.13.13"
ipython = "8.27.0"
isort = "5.13.2"
jedi = "0.19.1"
jinja2 = "3.1.2"
jmespath = "1.0.1"
kombu = "5.4.2"
mako = "1.3.5"
markupsafe = "2.1.5"
matplotlib-inline = "0.1.7"
packaging = "24.1"
parso = "0.8.4"
pexpect = "4.9.0"
pluggy = "1.5.0"
prometheus-client = "0.21.0"
prompt-toolkit = "3.0.48"
psycopg2-binary = "2.9.9"
ptyprocess = "0.7.0"
pure-eval = "0.2.3"
pydantic = "2.9.2"
pydantic-core = "2.23.4"
pygments = "2.18.0"
pytest = "7.4.3"
pytest-env = "1.1.3"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
python-multipart = "0.0.6"
pytz = "2024.2"
pyyaml = "6.0.2"
redis = "5.1.1"
requests = "2.32.3"
ruff = "0.6.8"
s3transfer = "0.10.2"
six = "1.16.0"
sniffio = "1.3.1"
sqlalchemy = "2.0.25"
stack-data = "0.6.3"
starlette = "0.27.0"
tornado = "6.4.1"
traitlets = "5.14.3"
typing-extensions = "4.12.2"
tzdata = "2024.2"
urllib3 = "2.2.3"
uvicorn = "0.24.0"
uvloop = "0.20.0"
vine = "5.1.0"
watchfiles = "0.24.0"
wcwidth = "0.2.13"
websockets = "13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
